[gd_scene load_steps=26 format=3 uid="uid://b64rk3r14m5br"]

[ext_resource type="Texture2D" uid="uid://bay3ak8k8pevv" path="res://assets/kloppenheim_06_puresky_4k.exr" id="1_cyo0m"]
[ext_resource type="Shader" path="res://assets/shaders/water.gdshader" id="2_twn8n"]
[ext_resource type="Script" path="res://Water.gd" id="3_t5r3v"]
[ext_resource type="Script" path="res://Cube.gd" id="3_wnrpb"]
[ext_resource type="PackedScene" uid="uid://bsa4mxdiai4cn" path="res://scenes/objects/ship.tscn" id="5_mbdmj"]
[ext_resource type="PackedScene" uid="uid://ckn6w6wr0wio5" path="res://scenes/objects/drop1.tscn" id="6_16j2k"]
[ext_resource type="PackedScene" uid="uid://bwngn0hyyq0ab" path="res://scenes/spawner.tscn" id="6_j53ok"]
[ext_resource type="Script" path="res://scripts/ui.gd" id="8_4io14"]
[ext_resource type="Texture2D" uid="uid://degf67ujlia3d" path="res://assets/UI Pack - Adventure/PNG/Default/banner_hanging.png" id="8_gl3sb"]
[ext_resource type="PackedScene" uid="uid://bapfkg04pl1m6" path="res://scenes/Dock1.tscn" id="10_0eyin"]
[ext_resource type="Texture2D" uid="uid://cww10hfap6le2" path="res://assets/UI Pack - Adventure/Vector/panel_brown_damaged_dark.svg" id="11_7ill1"]
[ext_resource type="Texture2D" uid="uid://dj1y02wbykgm1" path="res://assets/UI Pack - Adventure/Vector/banner_classic_curtain.svg" id="12_l8aje"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_vcvt7"]
panorama = ExtResource("1_cyo0m")

[sub_resource type="Sky" id="Sky_hfb2r"]
sky_material = SubResource("PanoramaSkyMaterial_vcvt7")

[sub_resource type="Environment" id="Environment_w5hlc"]
background_mode = 2
sky = SubResource("Sky_hfb2r")
tonemap_mode = 2
tonemap_exposure = 0.5
glow_enabled = true

[sub_resource type="FastNoiseLite" id="FastNoiseLite_6ktcq"]
fractal_type = 2

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_brvoh"]
seamless = true
as_normal_map = true
bump_strength = 1.5
noise = SubResource("FastNoiseLite_6ktcq")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_dq5fb"]
noise_type = 3
fractal_type = 2

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_u5h0n"]
seamless = true
as_normal_map = true
bump_strength = 1.5
noise = SubResource("FastNoiseLite_dq5fb")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_jbvdi"]
noise_type = 3
frequency = 0.001
fractal_type = 2
fractal_octaves = 3

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_7k2l2"]
seamless = true
noise = SubResource("FastNoiseLite_jbvdi")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r3suf"]
render_priority = 0
shader = ExtResource("2_twn8n")
shader_parameter/albedo = Color(0, 0.321569, 0.431373, 1)
shader_parameter/albedo2 = Color(0, 0.47451, 0.764706, 1)
shader_parameter/color_deep = Color(0.105882, 0.294118, 0.329412, 1)
shader_parameter/color_shallow = Color(0, 0.552941, 0.65098, 1)
shader_parameter/metallic = 0.0
shader_parameter/roughness = 0.02
shader_parameter/wave_time = 0.0
shader_parameter/wave_direction = Vector2(2, 0)
shader_parameter/wave_2_direction = Vector2(0, 1)
shader_parameter/time_scale = 0.025
shader_parameter/wave_speed = 0.2
shader_parameter/noise_scale = 10.0
shader_parameter/height_scale = 2.0
shader_parameter/beers_law = 0.089
shader_parameter/depth_offset = -0.75
shader_parameter/edge_scale = 0.362
shader_parameter/near = 0.5
shader_parameter/far = 100.0
shader_parameter/edge_color = Color(0, 0.266667, 0.533333, 1)
shader_parameter/texture_normal = SubResource("NoiseTexture2D_brvoh")
shader_parameter/texture_normal2 = SubResource("NoiseTexture2D_u5h0n")
shader_parameter/wave = SubResource("NoiseTexture2D_7k2l2")

[sub_resource type="PlaneMesh" id="PlaneMesh_0xwda"]
lightmap_size_hint = Vector2i(2502, 2502)
material = SubResource("ShaderMaterial_r3suf")
size = Vector2(1000, 1000)
subdivide_width = 1
subdivide_depth = 1

[sub_resource type="BoxMesh" id="BoxMesh_km0el"]
size = Vector3(5, 1, 10)

[sub_resource type="BoxShape3D" id="BoxShape3D_lu3w5"]
size = Vector3(5, 1, 10)

[node name="Main" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_w5hlc")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.940098, 0.0859291, -0.329897, -0.23722, -0.859886, 0.452021, -0.244833, 0.503202, 0.828761, 0, 0, 0)
shadow_enabled = true

[node name="Water" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_0xwda")
script = ExtResource("3_t5r3v")

[node name="Cube" type="RigidBody3D" parent="."]
transform = Transform3D(-1.52333, 0, -1.29595, 0, 2, 0, 1.29595, 0, -1.52333, 0, 16.93, 211.444)
visible = false
disable_mode = 1
mass = 3.065
script = ExtResource("3_wnrpb")
water_angular_drag = 0.1

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cube"]
transform = Transform3D(9, 0, 0, 0, 9, 0, 0, 0, 9, 0, 0, 0)
mesh = SubResource("BoxMesh_km0el")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Cube"]
transform = Transform3D(9, 0, 0, 0, 9, 0, 0, 0, 9, 0, 0, 0)
shape = SubResource("BoxShape3D_lu3w5")

[node name="ProbeContainer" type="Node3D" parent="Cube"]
transform = Transform3D(9, 0, 0, 0, 9, 0, 0, 0, 9, 0, -0.590401, 0)

[node name="Probe" type="Marker3D" parent="Cube/ProbeContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0, 5)

[node name="Probe2" type="Marker3D" parent="Cube/ProbeContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0, 0)

[node name="Probe3" type="Marker3D" parent="Cube/ProbeContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0, -5)

[node name="Probe4" type="Marker3D" parent="Cube/ProbeContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)

[node name="Probe5" type="Marker3D" parent="Cube/ProbeContainer"]

[node name="Probe6" type="Marker3D" parent="Cube/ProbeContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5)

[node name="Probe7" type="Marker3D" parent="Cube/ProbeContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 0, 5)

[node name="Probe8" type="Marker3D" parent="Cube/ProbeContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 0, 0)

[node name="Probe9" type="Marker3D" parent="Cube/ProbeContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 0, -5)

[node name="Ship" parent="." instance=ExtResource("5_mbdmj")]
transform = Transform3D(0.5, 0, 0, 0, 0.49997, -0.00548022, 0, 0.00548022, 0.49997, 1.541, 0.0621126, 52.868)
move_speed = 10.0

[node name="Spawner" parent="." node_paths=PackedStringArray("player") instance=ExtResource("6_j53ok")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.541, -0.725719, 52.868)
drops = Array[PackedScene]([ExtResource("6_16j2k"), ExtResource("6_16j2k"), ExtResource("6_16j2k"), ExtResource("6_16j2k"), ExtResource("6_16j2k")])
player = NodePath("../Ship")

[node name="WinUI" type="CanvasLayer" parent="."]
unique_name_in_owner = true
script = ExtResource("8_4io14")

[node name="HFlowContainer" type="HFlowContainer" parent="WinUI"]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="WinUI/HFlowContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PanelBrownDamagedDark" type="Sprite2D" parent="WinUI/HFlowContainer/Control"]
texture_filter = 1
position = Vector2(0, 40)
scale = Vector2(6, 5)
texture = ExtResource("11_7ill1")

[node name="BannerHanging" type="Sprite2D" parent="WinUI/HFlowContainer/Control"]
texture_filter = 1
position = Vector2(0, -126)
scale = Vector2(1.78906, 2.4375)
texture = ExtResource("12_l8aje")

[node name="Label2" type="Label" parent="WinUI/HFlowContainer/Control/BannerHanging"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -248.175
offset_top = -49.641
offset_right = -10.1747
offset_bottom = -21.641
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 15
text = "Completaste el nivel"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Exit" type="Button" parent="WinUI/HFlowContainer/Control"]
layout_mode = 0
offset_left = -101.0
offset_top = 111.0
offset_right = -15.0
offset_bottom = 156.0
text = "Salir"

[node name="Contine" type="Button" parent="WinUI/HFlowContainer/Control"]
layout_mode = 0
offset_left = 9.0
offset_top = 111.0
offset_right = 95.0
offset_bottom = 156.0
text = "Continuar"

[node name="Label" type="Label" parent="WinUI/HFlowContainer/Control"]
texture_filter = 1
texture_repeat = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -157.0
offset_top = -26.0
offset_right = 154.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 18
text = "Felicitaciones, completaste el nivel. Puedes seguir con el siguiente nivel"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="ScoreUI" type="CanvasLayer" parent="."]
unique_name_in_owner = true
script = ExtResource("8_4io14")

[node name="HFlowContainer" type="HFlowContainer" parent="ScoreUI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -18.0
offset_right = 22.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="BannerHanging" type="Sprite2D" parent="ScoreUI/HFlowContainer"]
position = Vector2(0, 40)
texture = ExtResource("8_gl3sb")

[node name="score" type="Label" parent="ScoreUI/HFlowContainer/BannerHanging"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -148.0
offset_top = -43.5
offset_right = -108.0
offset_bottom = -20.5
grow_horizontal = 2
grow_vertical = 2
text = "ESTO ES UN TEXTO DE PRUEBA"

[node name="Dock" parent="." instance=ExtResource("10_0eyin")]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 7.18286, 3.43758, -20.7861)

[connection signal="button_down" from="WinUI/HFlowContainer/Control/Exit" to="WinUI" method="_on_exit_button_down"]
[connection signal="button_down" from="WinUI/HFlowContainer/Control/Contine" to="WinUI" method="_on_contine_button_down"]
